Fixed review issues

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         </div>
         <h3 class="price">3000 &#8381;&nbsp;&nbsp;&nbsp;<span class="previous-price">5000 &#8381;</span></h3>
     </section>
+    <section class="small-description">
+        <p class="small-description-text">Будет радовать вас.</p>
+    </section>
     <section class="description">
         <p class="description-text">Будет радовать вас каждый день.</p>
     </section>
@@ -44,6 +47,9 @@
             <img src="empty_star.png" alt="">
         </div>
         <h3 class="price">1000 &#8381;</h3>
+    </section>
+    <section class="small-description">
+        <p class="small-description-text">Сводит с ума любого</p>
     </section>
     <section class="description">
         <p class="description-text">
@@ -68,6 +74,9 @@
         </div>
         <h3 class="price">500 &#8381;&nbsp;&nbsp;&nbsp;</h3>
     </section>
+    <section class="small-description">
+        <p class="small-description-text">Кот как кот</p>
+    </section>
     <section class="description">
         <p class="description-text">Простой дворовый кот.
             Неприхотлив, часто гуляет сам по себе.
@@ -89,6 +98,9 @@
             <img src="empty_star.png" alt="">
         </div>
         <h3 class="price">1999 &#8381;&nbsp;&nbsp;&nbsp;<span class="previous-price">2000 &#8381;</span></h3>
+    </section>
+    <section class="small-description">
+        <p class="small-description-text">СУПЕР ПРЕДЛОЖЕНИЕ!</p>
     </section>
     <section class="description">
         <p class="description-text">
@@ -118,6 +130,9 @@
             <span class="previous-price">15000 &#8381;</span>
         </h3>
     </section>
+    <section class="small-description">
+        <p class="small-description-text">Приличная кошка редкой породы</p>
+    </section>
     <section class="description">
         <p class="description-text">
             Продаётся кошка очень редкой породы.
@@ -144,6 +159,9 @@
         </div>
         <h3 class="price">3000 &#8381;&nbsp;&nbsp;&nbsp;</h3>
     </section>
+    <section class="small-description">
+        <p class="small-description-text">Продаётся кот, 2 года.</p>
+    </section>
     <section class="description">
         <p class="description-text">
             Продаётся кот, 2 года.
@@ -168,6 +186,9 @@
         </div>
         <h3 class="price">0 &#8381;&nbsp;&nbsp;&nbsp;</h3>
     </section>
+    <section class="small-description">
+        <p class="small-description-text">Бездомный бедняга.</p>
+    </section>
     <section class="description">
         <p class="description-text">Нашли на улице этого милого котёнка. Хотим отдать в хорошие руки.</p>
     </section>
@@ -187,6 +208,9 @@
             <img src="full_star.png" alt="">
         </div>
         <h3 class="price">5000 &#8381;&nbsp;&nbsp;&nbsp;</h3>
+    </section>
+    <section class="small-description">
+        <p class="small-description-text">Взрослый, воспитанный кот.</p>
     </section>
     <section class="description">
         <p class="description-text">
@@ -215,6 +239,9 @@
         </div>
         <h3 class="price">2700 &#8381;&nbsp;&nbsp;&nbsp;</h3>
     </section>
+    <section class="small-description">
+        <p class="small-description-text">Keep calm. Just keep calm.</p>
+    </section>
     <section class="description">
         <p class="description-text">Relax, maaan. What's your problem? Calm down.
             Just close your eyes. And feel it. Yeahh. Do you feel it?
@@ -237,6 +264,9 @@
             <img src="empty_star.png" alt="">
         </div>
         <h3 class="price">3000 &#8381;&nbsp;&nbsp;&nbsp;</h3>
+    </section>
+    <section class="small_description">
+        <p class="small-description-text">Игривый котёнок.</p>
     </section>
     <section class="description">
         <p class="description-text">
