Fixed review issues

--- a/index.html
+++ b/index.html
@@ -6,24 +6,15 @@
     <title>Задача «Про котиков»</title>
 </head>
 <body>
-<input type="checkbox" id="list">
+<input type="checkbox" id="list" class="list">
 <label for="list">Показывать списком</label>
 <br>
-<article>
+<article class="cat-article">
     <section class="picture">
-        <img class="cat-picture" alt="Изображение котика" src="cat1.jpg">
+        <img class="cat-picture" alt="Изображение котика" title="Няша" src="cat1.jpg">
     </section>
     <section class="information">
-        <h3 class="name"><a href="https://example.com">Няша</a></h3>
-        <h6 class="category"><span>милые</span></h6>
-        <div class="rating">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-        </div>
-        <h3 class="price">3000 &#8381;&nbsp;&nbsp;&nbsp;<span class="previous-price">5000 &#8381;</span></h3>
+        <h3 class="name">Няша</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Будет радовать вас.</p>
@@ -32,21 +23,12 @@
         <p class="description-text">Будет радовать вас каждый день.</p>
     </section>
 </article>
-<article>
+<article class="cat-article">
     <section class="picture">
-        <img class="cat-picture" alt="Изображение котика" src="cat2.jpg">
+        <img class="cat-picture" alt="Изображение котика" title="Котёнок" src="cat2.jpg">
     </section>
     <section class="information">
-        <h3 class="name"><a href="https://example.com">Котёнок</a></h3>
-        <h6 class="category"><span>милые</span></h6>
-        <div class="rating">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="empty_star.png" alt="">
-        </div>
-        <h3 class="price">1000 &#8381;</h3>
+        <h3 class="name">Котёнок</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Сводит с ума любого</p>
@@ -58,21 +40,12 @@
         </p>
     </section>
 </article>
-<article>
+<article class="cat-article">
     <section class="picture">
-        <img class="cat-picture" alt="Изображение котика" src="cat3.jpg">
+        <img class="cat-picture" alt="Изображение котика" title="Филимон" src="cat3.jpg">
     </section>
     <section class="information">
-        <h3 class="name"><a href="https://example.com">Филимон</a></h3>
-        <h6 class="category"><span>дворовый</span></h6>
-        <div class="rating">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-        </div>
-        <h3 class="price">500 &#8381;&nbsp;&nbsp;&nbsp;</h3>
+        <h3 class="name">Филимон</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Кот как кот</p>
@@ -83,21 +56,12 @@
             Иногда дерётся с соседскими котами.</p>
     </section>
 </article>
-<article>
+<article class="cat-article">
     <section class="picture">
-        <img class="cat-picture" alt="Изображение котика" src="cat4.jpg">
+        <img class="cat-picture" alt="Изображение котика" title="Сладкая парочка" src="cat4.jpg">
     </section>
     <section class="information">
-        <h3 class="name"><a href="https://example.com">Сладкая парочка</a></h3>
-        <h6 class="category"><span>СУПЕР ПРЕДЛОЖЕНИЕ</span></h6>
-        <div class="rating">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-        </div>
-        <h3 class="price">1999 &#8381;&nbsp;&nbsp;&nbsp;<span class="previous-price">2000 &#8381;</span></h3>
+        <h3 class="name">Сладкая парочка</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">СУПЕР ПРЕДЛОЖЕНИЕ!</p>
@@ -112,23 +76,12 @@
         </p>
     </section>
 </article>
-<article>
+<article class="cat-article">
     <section class="picture">
-        <img class="cat-picture" alt="Изображение котика" src="cat5.jpg">
+        <img class="cat-picture" alt="Изображение котика" title="Алиса" src="cat5.jpg">
     </section>
     <section class="information">
-        <h3 class="name"><a href="https://example.com">Алиса</a></h3>
-        <h6 class="category"><span>задумчивые</span></h6>
-        <div class="rating">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="empty_star.png" alt="">
-        </div>
-        <h3 class="price">10000 &#8381;&nbsp;&nbsp;&nbsp;
-            <span class="previous-price">15000 &#8381;</span>
-        </h3>
+        <h3 class="name">Алиса</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Приличная кошка редкой породы</p>
@@ -143,21 +96,12 @@
         </p>
     </section>
 </article>
-<article>
+<article class="cat-article">
     <section class="picture">
-        <img class="cat-picture" alt="Изображение котика" src="cat6.jpg">
+        <img class="cat-picture" alt="Изображение котика" title="Барсик" src="cat6.jpg">
     </section>
     <section class="information">
-        <h3 class="name"><a href="https://example.com">Барсик</a></h3>
-        <h6 class="category"><span>игривый</span></h6>
-        <div class="rating">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-        </div>
-        <h3 class="price">3000 &#8381;&nbsp;&nbsp;&nbsp;</h3>
+        <h3 class="name">Барсик</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Продаётся кот, 2 года.</p>
@@ -170,21 +114,12 @@
         </p>
     </section>
 </article>
-<article>
+<article class="cat-article">
     <section class="picture">
-        <img class="cat-picture" alt="Изображение котика" src="cat7.jpg">
+        <img class="cat-picture" alt="Изображение котика" title="Беспризорник" src="cat7.jpg">
     </section>
     <section class="information">
-        <h3 class="name"><a href="https://example.com">Беспризорник</a></h3>
-        <h6 class="category"><span>котята</span></h6>
-        <div class="rating">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-        </div>
-        <h3 class="price">0 &#8381;&nbsp;&nbsp;&nbsp;</h3>
+        <h3 class="name">Беспризорник</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Бездомный бедняга.</p>
@@ -193,21 +128,12 @@
         <p class="description-text">Нашли на улице этого милого котёнка. Хотим отдать в хорошие руки.</p>
     </section>
 </article>
-<article>
+<article class="cat-article">
     <section class="picture">
-        <img class="cat-picture" alt="Изображение котика" src="cat8.jpg">
+        <img class="cat-picture" alt="Изображение котика" title="Роман" src="cat8.jpg">
     </section>
     <section class="information">
-        <h3 class="name"><a href="https://example.com">Роман</a></h3>
-        <h6 class="category"><span>романтик</span></h6>
-        <div class="rating">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-        </div>
-        <h3 class="price">5000 &#8381;&nbsp;&nbsp;&nbsp;</h3>
+        <h3 class="name">Роман</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Взрослый, воспитанный кот.</p>
@@ -219,25 +145,13 @@
         </p>
     </section>
 </article>
-<article>
+<article class="cat-article">
     <section class="picture">
-        <img class="cat-picture" alt="Изображение котика" src="cat9.jpg">
+        <img class="cat-picture" alt="Изображение котика"
+             title="Котэээээээээээээээээээээээээээээээээээээээээээээээээээээээ" src="cat9.jpg">
     </section>
     <section class="information">
-        <h3 class="name">
-            <a href="https://example.com" title="Котэээээээээээээээээээээээээээээээээээээээээээээээээээээээ">
-                Котэээээээээээээээээээээээээээээээээээээээээээээээээээээээ
-            </a>
-        </h3>
-        <h6 class="category"><span>спокойный</span></h6>
-        <div class="rating">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-            <img src="full_star.png" alt="">
-        </div>
-        <h3 class="price">2700 &#8381;&nbsp;&nbsp;&nbsp;</h3>
+        <h3 class="name">Котэээээээээээээээээээээээээээээээээээээээээээээээээээээээ</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Keep calm. Just keep calm.</p>
@@ -249,21 +163,12 @@
         </p>
     </section>
 </article>
-<article>
+<article class="cat-article">
     <section class="picture">
-        <img class="cat-picture" alt="Изображение котика" src="cat10.jpg">
+        <img class="cat-picture" alt="Изображение котика" title="Васька" src="cat10.jpg">
     </section>
     <section class="information">
-        <h3 class="name"><a href="https://example.com">Васька</a></h3>
-        <h6 class="category"><span>радужный</span></h6>
-        <div class="rating">
-            <img src="full_star.png" alt="">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-            <img src="empty_star.png" alt="">
-        </div>
-        <h3 class="price">3000 &#8381;&nbsp;&nbsp;&nbsp;</h3>
+        <h3 class="name">Васька</h3>
     </section>
     <section class="small_description">
         <p class="small-description-text">Игривый котёнок.</p>
