--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </section>
     <section class="information">
         <h3 class="name">Няша</h3>
+        <h6 class="category"><span>милые</span></h6>
+        <h3 class="price">3000 &#8381;&nbsp;&nbsp;&nbsp;<span class="previous-price">5000 &#8381;</span></h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Будет радовать вас.</p>
@@ -29,6 +31,8 @@
     </section>
     <section class="information">
         <h3 class="name">Котёнок</h3>
+        <h6 class="category"><span>милые</span></h6>
+        <h3 class="price">1000 &#8381;</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Сводит с ума любого</p>
@@ -46,6 +50,8 @@
     </section>
     <section class="information">
         <h3 class="name">Филимон</h3>
+        <h6 class="category"><span>дворовый</span></h6>
+        <h3 class="price">500 &#8381;&nbsp;&nbsp;&nbsp;</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Кот как кот</p>
@@ -62,6 +68,8 @@
     </section>
     <section class="information">
         <h3 class="name">Сладкая парочка</h3>
+        <h6 class="category"><span>СУПЕР ПРЕДЛОЖЕНИЕ</span></h6>
+        <h3 class="price">1999 &#8381;&nbsp;&nbsp;&nbsp;<span class="previous-price">2000 &#8381;</span></h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">СУПЕР ПРЕДЛОЖЕНИЕ!</p>
@@ -82,6 +90,11 @@
     </section>
     <section class="information">
         <h3 class="name">Алиса</h3>
+        <h6 class="category"><span>задумчивые</span></h6>
+        <h3 class="price">
+            10000 &#8381;&nbsp;&nbsp;&nbsp;
+            <span class="previous-price">15000 &#8381;</span>
+        </h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Приличная кошка редкой породы</p>
@@ -102,6 +115,8 @@
     </section>
     <section class="information">
         <h3 class="name">Барсик</h3>
+        <h6 class="category"><span>игривый</span></h6>
+        <h3 class="price">3000 &#8381;&nbsp;&nbsp;&nbsp;</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Продаётся кот, 2 года.</p>
@@ -120,6 +135,8 @@
     </section>
     <section class="information">
         <h3 class="name">Беспризорник</h3>
+        <h6 class="category"><span>котята</span></h6>
+        <h3 class="price">0 &#8381;&nbsp;&nbsp;&nbsp;</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Бездомный бедняга.</p>
@@ -134,6 +151,8 @@
     </section>
     <section class="information">
         <h3 class="name">Роман</h3>
+        <h6 class="category"><span>романтик</span></h6>
+        <h3 class="price">5000 &#8381;&nbsp;&nbsp;&nbsp;</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Взрослый, воспитанный кот.</p>
@@ -152,6 +171,8 @@
     </section>
     <section class="information">
         <h3 class="name">Котэээээээээээээээээээээээээээээээээээээээээээээээээээээээ</h3>
+        <h6 class="category"><span>спокойный</span></h6>
+        <h3 class="price">2700 &#8381;&nbsp;&nbsp;&nbsp;</h3>
     </section>
     <section class="small-description">
         <p class="small-description-text">Keep calm. Just keep calm.</p>
@@ -169,6 +190,8 @@
     </section>
     <section class="information">
         <h3 class="name">Васька</h3>
+        <h6 class="category"><span>радужный</span></h6>
+        <h3 class="price">3000 &#8381;&nbsp;&nbsp;&nbsp;</h3>
     </section>
     <section class="small_description">
         <p class="small-description-text">Игривый котёнок.</p>
